--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,25 @@ body, h1, h2, h3 {
 }
 
 a {
-  color: white;
+  font-family: Tahoma,Arial,Verdana,Helvetica,"Bitstream Vera Sans",sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 0.8em;
+  line-height: 0.8em;
+  font-size-adjust: none;
+  font-stretch: normal;
+  -x-system-font: none;
+  font-feature-settings: normal;
+  font-language-override: normal;
+  font-kerning: auto;
+  font-synthesis: weight style;
+  font-variant-alternates: normal;
+  font-variant-caps: normal;
+  font-variant-east-asian: normal;
+  font-variant-ligatures: normal;
+  font-variant-numeric: normal;
+  font-variant-position: normal;
+  color: black;
   text-decoration: none;
 
   &:hover {
