--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,18 @@
 html, body, #root {
   margin: 0;
   height: 100%;
-  font-family: 'Open Sans', sans-serif;
+  font-family: Tahoma,Arial,Verdana,Helvetica,"Bitstream Vera Sans",sans-serif;
+  font-size: 13px;
 }
 
-body, h1, h2, h3 {
-  font-weight: 300
-}
+// body, h1, h2, h3 {
+//   font-weight: 300
+// }
 
 a {
-  font-family: Tahoma,Arial,Verdana,Helvetica,"Bitstream Vera Sans",sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 0.8em;
+  font-size: 13px;
   line-height: 0.8em;
   font-size-adjust: none;
   font-stretch: normal;
@@ -33,4 +33,20 @@ a {
   &:hover {
     color: #5aadbb;
   }
+}
+
+.text-badge {
+    display: inline-block;
+    position: relative;
+    padding: 0px 3px 0px;
+    min-width: 12px;
+    margin-left: 8px;
+    border-radius: 3px;
+    line-height: 17px;
+    white-space: nowrap;
+    font-size: 10px;
+    font-family: inherit;
+    font-weight: bold;
+    overflow: hidden;
+    color: #7e7070; 
 }
