--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,8 @@ html, body, #root {
   margin: 0;
   height: 100%;
   font-family: Tahoma,Arial,Verdana,Helvetica,"Bitstream Vera Sans",sans-serif;
-  font-size: 13px;
+  font-size: 15px;
+  color: #7e7070;
 }
 
 // body, h1, h2, h3 {
@@ -10,6 +11,7 @@ html, body, #root {
 // }
 
 a {
+  cursor: pointer;
   font-style: normal;
   font-weight: normal;
   font-size: 13px;
@@ -27,8 +29,8 @@ a {
   font-variant-ligatures: normal;
   font-variant-numeric: normal;
   font-variant-position: normal;
-  color: black;
   text-decoration: none;
+  color: #7e7070;
 
   &:hover {
     color: #5aadbb;
@@ -36,6 +38,7 @@ a {
 }
 
 .text-badge {
+    cursor: pointer;
     display: inline-block;
     position: relative;
     padding: 0px 3px 0px;
@@ -48,5 +51,5 @@ a {
     font-family: inherit;
     font-weight: bold;
     overflow: hidden;
-    color: #7e7070; 
+    color: #7e7070;
 }
