--- a/src/index.scss
+++ b/src/index.scss
@@ -37,6 +37,10 @@ a {
   }
 }
 
+.date {
+  font-size: 12px;
+}
+
 .text-badge {
     cursor: pointer;
     display: inline-block;
@@ -51,5 +55,12 @@ a {
     font-family: inherit;
     font-weight: bold;
     overflow: hidden;
-    color: #7e7070;
+    background-color: #7e7070;
+
+    a {
+      color: white;
+        &:hover {
+          color: #5aadbb;
+        }
+    }
 }
