--- a/src/index.scss
+++ b/src/index.scss
@@ -6,9 +6,25 @@ html, body, #root {
   color: #7e7070;
 }
 
-// body, h1, h2, h3 {
-//   font-weight: 300
-// }
+.feeds {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+.feed {
+  border: 1px solid lightgray;
+  margin: 2px;
+  padding: 5px;
+
+  img {
+    height: 16px;
+  }
+  .title {
+    margin: 0 0 5px 0;
+  }
+}
 
 a {
   cursor: pointer;
