--- a/src/index.scss
+++ b/src/index.scss
@@ -64,22 +64,25 @@ a {
 }
 
 .text-badge {
+    a {
+      font-size: 14px;
+      font-family: inherit;
+    }
     cursor: pointer;
     display: inline-block;
     position: relative;
     padding: 0px 3px 0px;
     min-width: 12px;
-    margin-left: 8px;
+    margin-left: 12px;
     border-radius: 3px;
-    line-height: 17px;
     white-space: nowrap;
-    font-size: 10px;
-    font-family: inherit;
-    font-weight: bold;
     overflow: hidden;
     background-color: #7e7070;
     &.open {
       background-color: #518d6a;
+    }
+    &.refresh {
+      background-color: steelblue;
     }
     &.close {
       background-color: #f19c4c;
