--- a/src/index.scss
+++ b/src/index.scss
@@ -130,6 +130,7 @@ a {
       background-color: #518d6a;
     }
     &.refresh {
+      font-family: Lucida Sans Unicode;
       background-color: steelblue;
     }
     &.close {
